--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+#restaurant-name {
+    text-align: center;
+}
+
 body {
     margin: 50;
     font-family: monospace;
@@ -29,6 +33,8 @@ button:hover {
     height: 10rem;
     width: auto;
     margin-top: 30px;
+    display: grid;
+    grid-template-columns: 50%;
   }
 
   #menu-list {
